--- a/learnword.css
+++ b/learnword.css
@@ -1,12 +1,13 @@
 * {
-    margin: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
 }
 
 body {
+    margin: 0;
     /* background: linear-gradient(#104C79, #09788B); */
     height: 100vh;
+    /* background-color: #161616; */
 }
 
 nav {
@@ -14,6 +15,57 @@ nav {
     padding: 5px 10px;
     height: 70px;
     box-shadow: 0 0 5px 0 #000000;
+}
+
+hr {
+    height: 2px;
+    border: 0;
+    background-color: #41464b73;
+}
+
+::selection {
+    /* background-color: #798085; */
+    background-color: #dadada;
+    /* color: #ffffff; */
+    color: #09788B;
+}
+
+#testdiv {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #00000090;
+}
+
+.testbox {
+    border-radius: 10px;
+    padding: 10px;
+    background: #ffffff;
+    width: 80%;
+    height: 80%;
+}
+
+.pos-right {
+    margin-left: auto;
+    float: right;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.w-50 {
+    width: 50%;
+}
+
+.word {
+    text-align: center;
+    font-size: calc(22px + 5vw);
+    min-width: 50px;
 }
 
 .font1 {
@@ -37,20 +89,13 @@ nav {
     width: 50px;
     text-align: center;
     font-size: 20px;
+    font-weight: bold;
     padding: 8px;
 }
 
 .head {
     color: #eeeeee;
     font-size: 20px;
-}
-
-.burger-btn {
-    background-color: transparent;
-    color: #eeeeee;
-    border: 2px solid #09788B;
-    font-size: 28px;
-    width: 60px;
 }
 
 .navpg {
@@ -69,18 +114,8 @@ nav {
 }
 
 .navclose {
+    /* top: 100vh; */
     left: -100vw;
-}
-
-.close {
-    padding: 10px 20px !important;
-    float: right;
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 30px;
-    font-weight: 600;
-    border: 2px solid #eeeeee;
 }
 
 .navlist {
@@ -102,19 +137,40 @@ nav {
     position: relative;
 }
 
-.text-center {
-    text-align: center
+.burger-btn {
+    background-color: transparent;
+    color: #eeeeee;
+    border: 2px solid #09788B;
+    font-size: 28px;
+    width: 60px;
+}
+
+.container {
+    max-width: 992px;
+    margin: auto;
+}
+
+.close {
+    padding: 10px 20px !important;
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    font-weight: 600;
+    border: 2px solid #eeeeee;
+}
+
+.d-none {
+    display: none!important;
 }
 
 .result {
     width: 100%;
 }
 
-.synon {
-    border: 2px solid #09788B;
-    border-radius: 50px;
-    padding: 5px 10px;
-    margin-bottom: 5px;
+.text-center {
+    text-align: center
 }
 
 .text-prime {
@@ -140,7 +196,6 @@ nav {
 }
 
 .btn-prime:hover {
-    cursor: none;
     box-shadow: 0 0 5px 0 #000000;
 }
 
@@ -148,4 +203,64 @@ nav {
     background-color: transparent;
     color: #09788B;
     box-shadow: none;
+}
+
+
+/* word box */
+
+.speakericon {
+    margin: 0 10px;
+    cursor: pointer;
+    background-color: #09788B;
+    color: #ffffff;
+    padding: 5px;
+    border: 1px solid #09788B;
+    border-radius: 50px;
+    transition: all 100ms linear;
+}
+
+.speakericon:hover {
+    background-color: #0c98b1;
+}
+
+.speakericon:active {
+    background-color: #ffffff;
+    color: #09788B;
+}
+
+#worddiv {
+    padding: 10px;
+}
+
+.synon {
+    border: 2px solid #09788B;
+    border-radius: 50px;
+    padding: 5px 10px;
+    margin: 5px;
+    max-width: fit-content;
+    cursor: pointer;
+}
+
+.synon:active {
+    background-color: #eeeeee;
+}
+
+#synonyms {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+}
+
+.definitionbox,
+.examplebox,
+.synonymsbox {
+    margin: 10px 5px;
+}
+
+.definitionbox>span,
+.examplebox>span,
+.synonymsbox>span {
+    color: #09788B;
 }
