--- a/learnword.css
+++ b/learnword.css
@@ -110,7 +110,7 @@ hr {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    transition: all 0.5s ease-in-out;
+    transition: all 400ms ease-in-out;
 }
 
 .navclose {
